manifests/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-server
  namespace: woodpecker
spec:
  ingressClassName: traefik
  rules:
    - host: woodpecker.morrisons.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  number: 80
